@@ -1,3 +1,9 @@
+Tue Jul 8 11:15 GMT 2003 Jim Segrave jes@jes-2.demon.nl
+
+	* rollout.c - initialise internal variables on first game of
+	  rollout
+	
+	
 Mon Jul  7 12:33:17 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* rollout.c (RolloutDice): fix bug in generated dice for
